--- a/study/index.html
+++ b/study/index.html
@@ -35,7 +35,48 @@
 </div>
 <!-- type-nav -->
 <div class="type-nav">
+    <div class="wrapper">
+        <!-- left -->
+        <div class="left">
+            <ul>
+                <li class="first"><a href="">前端开发<span>></span></a></li>
+                <li><a href="">前端开发<span>></span></a></li>
+                <li><a href="">前端开发<span>></span></a></li>
+                <li><a href="">前端开发<span>></span></a></li>
+                <li><a href="">前端开发<span>></span></a></li>
+                <li><a href="">前端开发<span>></span></a></li>
+                <li><a href="">前端开发<span>></span></a></li>
+                <li><a href="">前端开发<span>></span></a></li>
+                <li class="last"><a href="">前端开发<span>></span></a></li>
+            </ul>
+        </div>
 
+        <!-- menu -->
+        <div class="menu">
+            <h2>我的课程表</h2>
+            <div class="submenu">
+                <ul>
+                    <li>
+                        <h4>继续学习 程序语言设计</h4>
+                        <p>正在学习-使用对象</p>
+                    </li>
+                    <li>
+                        <h4>继续学习 程序语言设计</h4>
+                        <p>正在学习-使用对象</p>
+                    </li>
+                    <li>
+                        <h4>继续学习 程序语言设计</h4>
+                        <p>正在学习-使用对象</p>
+                    </li>
+                </ul>
+
+                <a href="#" class="more">全部课程</a>
+            </div>
+        </div>
+        <!-- banner -->
+        <div class="banner">
+        </div>
+    </div>
 </div>
 
 </body>
