--- a/study/index.html
+++ b/study/index.html
@@ -78,6 +78,19 @@
         </div>
     </div>
 </div>
+<!-- text -->
+<div class="text wrapper">
+    <ul>
+        <li><a href="">精品推荐</a></li>
+        <li><a href="">MySQL</a></li>
+        <li><a href="">MySQL</a></li>
+        <li><a href="">MySQL</a></li>
+        <li><a href="">MySQL</a></li>
+        <li><a href="">MySQL</a></li>
+        <li><a href="">MySQL</a></li>
+    </ul>
+    <span>修改兴趣</span>
+</div>
 
 </body>
 </html>
