--- a/study/index.html
+++ b/study/index.html
@@ -91,6 +91,133 @@
     </ul>
     <span>修改兴趣</span>
 </div>
+<!-- recommend -->
+<div class="recommend wrapper">
+    <div class="doc">
+        <span>精品推荐</span>
+        <a href="">查看全部</a>
+    </div>
+    <div class="image wrapper">
+        <div class="father">
+            <img src="./images/图层133.png" alt="">
+            <img class="position" src="./images/HOT.png" alt="">
+                <span>Think PHP 5.0博客系统实战项目演练</span>
+                <div class="son">
+                    <div class="son1">高级</div>
+                    <div class="son2">1125人在学习</div>
+                </div>
+        </div>
+        <div class="father">
+            <img src="./images/图层133.png" alt="">
+            <span>Think PHP 5.0博客系统实战项目演练</span>
+            <div class="son">
+                <div class="son1">高级</div>
+                <div class="son2">1125人在学习</div>
+            </div>
+        </div>
+        <div class="father">
+            <img src="./images/图层133.png" alt="">
+            <span>Think PHP 5.0博客系统实战项目演练</span>
+            <div class="son">
+                <div class="son1">高级</div>
+                <div class="son2">1125人在学习</div>
+            </div>
+        </div>
+        <div class="father">
+            <img src="./images/图层133.png" alt="">
+            <span>Think PHP 5.0博客系统实战项目演练</span>
+            <div class="son">
+                <div class="son1">高级</div>
+                <div class="son2">1125人在学习</div>
+            </div>
+        </div>
+        <div class="father" id="special">
+            <img src="./images/图层133.png" alt="">
+            <span>Think PHP 5.0博客系统实战项目演练</span>
+            <div class="son">
+                <div class="son1">高级</div>
+                <div class="son2">1125人在学习</div>
+            </div>
+        </div>
+        <div class="father">
+            <img src="./images/图层133.png" alt="">
+            <span>Think PHP 5.0博客系统实战项目演练</span>
+            <div class="son">
+                <div class="son1">高级</div>
+                <div class="son2">1125人在学习</div>
+            </div>
+        </div>
+        <div class="father">
+            <img src="./images/图层133.png" alt="">
+            <span>Think PHP 5.0博客系统实战项目演练</span>
+            <div class="son">
+                <div class="son1">高级</div>
+                <div class="son2">1125人在学习</div>
+            </div>
+        </div>
+        <div class="father">
+            <img src="./images/图层133.png" alt="">
+            <span>Think PHP 5.0博客系统实战项目演练</span>
+            <div class="son">
+                <div class="son1">高级</div>
+                <div class="son2">1125人在学习</div>
+            </div>
+        </div>
+        <div class="father">
+            <img src="./images/图层133.png" alt="">
+            <span>Think PHP 5.0博客系统实战项目演练</span>
+            <div class="son">
+                <div class="son1">高级</div>
+                <div class="son2">1125人在学习</div>
+            </div>
+        </div>
+        <div class="father" id="special">
+            <img src="./images/图层133.png" alt="">
+            <span>Think PHP 5.0博客系统实战项目演练</span>
+            <div class="son">
+                <div class="son1">高级</div>
+                <div class="son2">1125人在学习</div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- footer -->
+<div class="footer wrapper">
+    <div class="w">
+        <div class="copyright">
+            <img src="images/学成在线.png" alt="">
+            <p>学成在线致力于普及中国最好的教育它与中国一流大学和机构合作提供在线课程。<br>
+                © 2017年XTCG Inc.保留所有权利。-沪ICP备15025210号</p>
+            <a href="#" class="app">下载APP</a>
+        </div>
+        <div class="links">
+            <dl>
+                <dt>关于学成网</dt>
+                <dd><a href="#">关于</a></dd>
+                <dd><a href="#">管理团队</a></dd>
+                <dd><a href="#">工作机会</a></dd>
+                <dd><a href="#">客户服务</a></dd>
+                <dd><a href="#">帮助</a></dd>
+            </dl>
+            <dl>
+                <dt>关于学成网</dt>
+                <dd><a href="#">关于</a></dd>
+                <dd><a href="#">管理团队</a></dd>
+                <dd><a href="#">工作机会</a></dd>
+                <dd><a href="#">客户服务</a></dd>
+                <dd><a href="#">帮助</a></dd>
+            </dl>
+            <dl>
+                <dt>关于学成网</dt>
+                <dd><a href="#">关于</a></dd>
+                <dd><a href="#">管理团队</a></dd>
+                <dd><a href="#">工作机会</a></dd>
+                <dd><a href="#">客户服务</a></dd>
+                <dd><a href="#">帮助</a></dd>
+            </dl>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
