--- a/jd/index.html
+++ b/jd/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="favicon.ico">
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
@@ -44,7 +44,29 @@
     </div>
 </div>
 <!-- 头部 -->
-<div class="header">
+<div class="header w">
+    <div class="logo">
+        <h1>
+            <a href="index.html" title="京东">京东</a>
+        </h1>
+    </div>
+    <div class="search">
+        <input type="text" name="" id="" placeholder="语言开发">
+        <button>搜索</button>
+    </div>
+    <div class="hotwords">
+        <a href="#" class="style-red">优惠购首发</a>
+        <a href="#">亿元优惠</a>
+        <a href="#">9.9元团购</a>
+        <a href="#">满99减30</a>
+        <a href="#">办公用品</a>
+        <a href="#">电脑</a>
+        <a href="#">通信</a>
+    </div>
+    <div class="shopcar">
+        <i class="car"></i><i>我的购物车</i><i class="arrow"></i>
+        <i class="count">8</i>
+    </div>
 
 </div>
 
