--- a/jd/index.html
+++ b/jd/index.html
@@ -19,7 +19,7 @@
     <div class="shortcut w">
         <div class="fl">
             <ul>
-                <li>京东欢迎您！请</li>
+                <li>&nbsp;&nbsp;京东欢迎您！请</li>
                 <li><a href="login.html">登录</a>&nbsp;&nbsp;</li>
                 <li><a  class="color-red" href="register">免费注册</a></li>
             </ul>
@@ -67,7 +67,43 @@
         <i class="car"></i><i>我的购物车</i><i class="arrow"></i>
         <i class="count">8</i>
     </div>
-
+</div>
+<!-- 导航 -->
+<div class="nav">
+    <div class="w">
+        <div class="dropdown fl">
+            <div class="dropdown-dd">全部商品分类</div>
+            <div class="dropdown-dt">
+                <ul>
+                    <li><a href="">家用电器</a><i></i></li>
+                    <li><a href="">手机、数码、通信</a><i></i></li>
+                    <li><a href="">电脑、办公</a><i></i></li>
+                    <li><a href="">家居、家具、家装、厨具</a><i></i></li>
+                    <li><a href="">男装、女装、童装、内衣</a><i></i></li>
+                    <li><a href="">个户化妆、清洁用品、宠物</a><i></i></li>
+                    <li><a href="">鞋靴、箱包、珠宝、奢侈品</a><i></i></li>
+                    <li><a href="">运动户外、钟表</a><i></i></li>
+                    <li><a href="">汽车、汽车用品</a><i></i></li>
+                    <li><a href="">母婴、玩具乐器</a><i></i></li>
+                    <li><a href="">食品、酒类、生鲜、特产</a><i></i></li>
+                    <li><a href="">医药保健</a><i></i></li>
+                    <li><a href="">图书、音像、电子书</a><i></i></li>
+                    <li><a href="">彩票、旅行、充值、票务</a><i></i></li>
+                    <li><a href=""> 理财、众筹、白条、保险</a><i></i></li>
+                </ul>
+            </div>
+        </div>
+        <div class="nav_items fl">
+            <a href="">服装城</a>
+            <a href="">美妆馆</a>
+            <a href="">传智超市</a>
+            <a href="">全球购</a>
+            <a href="">闪购</a>
+            <a href="">团购</a>
+            <a href="">拍卖</a>
+            <a href="">有趣</a>
+        </div>
+    </div>
 </div>
 
 </body>
