--- a/jd/index.html
+++ b/jd/index.html
@@ -73,25 +73,25 @@
     <div class="w">
         <div class="dropdown fl">
             <div class="dropdown-dd">全部商品分类</div>
-            <div class="dropdown-dt">
-                <ul>
-                    <li><a href="">家用电器</a><i></i></li>
-                    <li><a href="">手机、数码、通信</a><i></i></li>
-                    <li><a href="">电脑、办公</a><i></i></li>
-                    <li><a href="">家居、家具、家装、厨具</a><i></i></li>
-                    <li><a href="">男装、女装、童装、内衣</a><i></i></li>
-                    <li><a href="">个户化妆、清洁用品、宠物</a><i></i></li>
-                    <li><a href="">鞋靴、箱包、珠宝、奢侈品</a><i></i></li>
-                    <li><a href="">运动户外、钟表</a><i></i></li>
-                    <li><a href="">汽车、汽车用品</a><i></i></li>
-                    <li><a href="">母婴、玩具乐器</a><i></i></li>
-                    <li><a href="">食品、酒类、生鲜、特产</a><i></i></li>
-                    <li><a href="">医药保健</a><i></i></li>
-                    <li><a href="">图书、音像、电子书</a><i></i></li>
-                    <li><a href="">彩票、旅行、充值、票务</a><i></i></li>
-                    <li><a href=""> 理财、众筹、白条、保险</a><i></i></li>
-                </ul>
-            </div>
+<!--            <div class="dropdown-dt">-->
+<!--                <ul>-->
+<!--                    <li><a href="">家用电器</a><i></i></li>-->
+<!--                    <li><a href="">手机、数码、通信</a><i></i></li>-->
+<!--                    <li><a href="">电脑、办公</a><i></i></li>-->
+<!--                    <li><a href="">家居、家具、家装、厨具</a><i></i></li>-->
+<!--                    <li><a href="">男装、女装、童装、内衣</a><i></i></li>-->
+<!--                    <li><a href="">个户化妆、清洁用品、宠物</a><i></i></li>-->
+<!--                    <li><a href="">鞋靴、箱包、珠宝、奢侈品</a><i></i></li>-->
+<!--                    <li><a href="">运动户外、钟表</a><i></i></li>-->
+<!--                    <li><a href="">汽车、汽车用品</a><i></i></li>-->
+<!--                    <li><a href="">母婴、玩具乐器</a><i></i></li>-->
+<!--                    <li><a href="">食品、酒类、生鲜、特产</a><i></i></li>-->
+<!--                    <li><a href="">医药保健</a><i></i></li>-->
+<!--                    <li><a href="">图书、音像、电子书</a><i></i></li>-->
+<!--                    <li><a href="">彩票、旅行、充值、票务</a><i></i></li>-->
+<!--                    <li><a href=""> 理财、众筹、白条、保险</a><i></i></li>-->
+<!--                </ul>-->
+<!--            </div>-->
         </div>
         <div class="nav_items fl">
             <a href="">服装城</a>
@@ -102,6 +102,104 @@
             <a href="">团购</a>
             <a href="">拍卖</a>
             <a href="">有趣</a>
+        </div>
+    </div>
+</div>
+<!-- 底部 -->
+<div class="footer">
+    <div class="w">
+        <div class="introduction">
+            <ul>
+                <li>
+                    <div class="text"></div>
+                    <h5>正品保障</h5>
+                    <p>正品保障，提供发票</p>
+                </li>
+                <li>
+                    <div class="text"></div>
+                    <h5>极速物流</h5>
+                    <p>急速物流，急速送达</p>
+                </li>
+                <li>
+                    <div class="text"></div>
+                    <h5>无忧售后</h5>
+                    <p>7天无理由退换货</p>
+                </li>
+                <li>
+                    <div class="text"></div>
+                    <h5>特色服务</h5>
+                    <p>私人定制家电套餐</p>
+                </li>
+                <li>
+                    <div class="text"></div>
+                    <h5>帮助中心</h5>
+                    <p>您的购物指南</p>
+                </li>
+            </ul>
+        </div>
+        <div class="service">
+            <ul>
+                <li>
+                    <h5>购物指南</h5>
+                    <a href="">购物流程</a>
+                    <a href="">会员介绍</a>
+                    <a href="">生活旅行团购</a>
+                    <a href="">常见问题</a>
+                    <a href="">大家电</a>
+                    <a href="">联系客服</a>
+                </li>
+                <li>
+                    <h5>配送方式</h5>
+                    <a href="">上门自提</a>
+                    <a href="">211限时达</a>
+                    <a href="">配送服务查询</a>
+                    <a href="">配送费收取标准</a>
+                    <a href="">海外配送</a>
+
+                </li>
+                <li>
+                    <h5>支付方式</h5>
+                    <a href="">货到付款</a>
+                    <a href="">在线支付</a>
+                    <a href="">分期付款</a>
+                    <a href="">邮局汇款</a>
+                    <a href="">公司转账</a>
+                </li>
+                <li>
+                    <h5>售后服务</h5>
+                    <a href="">售后政策</a>
+                    <a href="">价格保护</a>
+                    <a href="">退款说明</a>
+                    <a href="">返修退换货</a>
+                    <a href="">取消订单</a>
+                </li>
+                <li>
+                    <h5>特色服务</h5>
+                    <a href="">夺宝岛</a>
+                    <a href="">DIY装机</a>
+                    <a href="">延保服务</a>
+                    <a href="">京东驱卡</a>
+                    <a href="">京东通信</a>
+                </li>
+            </ul>
+            <h5>&nbsp;&nbsp;特色服务</h5>
+            <img src="./images/QR-Code.png" alt="">
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;京东通信</p>
+        </div>
+        <div class="copyright">
+                <p class="links">
+                    关于我们 丨 联系我们 丨 联系客服 丨 商家入驻 丨 营销中心
+                    丨 手机京东 丨 友情链接 丨 销售联盟 丨 京东社区
+                    丨 京东公益丨 English site 丨 Contact U
+                </p>
+                <p class="info">
+                    地址：北京市昌平区建材城西路金燕龙办公楼一层
+                    邮编：180096 电话：400-618-4000 传真：616-82935100
+                    邮箱：zhanghj+itcast,cn
+                    <br>
+                    京ICP备88881421号京公网安备118188887782
+                </p>
+            </div>
         </div>
     </div>
 </div>
