--- a/jd/index.html
+++ b/jd/index.html
@@ -73,25 +73,25 @@
     <div class="w">
         <div class="dropdown fl">
             <div class="dropdown-dd">全部商品分类</div>
-<!--            <div class="dropdown-dt">-->
-<!--                <ul>-->
-<!--                    <li><a href="">家用电器</a><i></i></li>-->
-<!--                    <li><a href="">手机、数码、通信</a><i></i></li>-->
-<!--                    <li><a href="">电脑、办公</a><i></i></li>-->
-<!--                    <li><a href="">家居、家具、家装、厨具</a><i></i></li>-->
-<!--                    <li><a href="">男装、女装、童装、内衣</a><i></i></li>-->
-<!--                    <li><a href="">个户化妆、清洁用品、宠物</a><i></i></li>-->
-<!--                    <li><a href="">鞋靴、箱包、珠宝、奢侈品</a><i></i></li>-->
-<!--                    <li><a href="">运动户外、钟表</a><i></i></li>-->
-<!--                    <li><a href="">汽车、汽车用品</a><i></i></li>-->
-<!--                    <li><a href="">母婴、玩具乐器</a><i></i></li>-->
-<!--                    <li><a href="">食品、酒类、生鲜、特产</a><i></i></li>-->
-<!--                    <li><a href="">医药保健</a><i></i></li>-->
-<!--                    <li><a href="">图书、音像、电子书</a><i></i></li>-->
-<!--                    <li><a href="">彩票、旅行、充值、票务</a><i></i></li>-->
-<!--                    <li><a href=""> 理财、众筹、白条、保险</a><i></i></li>-->
-<!--                </ul>-->
-<!--            </div>-->
+            <div class="dropdown-dt">
+                <ul>
+                    <li><a href="">家用电器</a><i></i></li>
+                    <li><a href="">手机、数码、通信</a><i></i></li>
+                    <li><a href="">电脑、办公</a><i></i></li>
+                    <li><a href="">家居、家具、家装、厨具</a><i></i></li>
+                    <li><a href="">男装、女装、童装、内衣</a><i></i></li>
+                    <li><a href="">个户化妆、清洁用品、宠物</a><i></i></li>
+                    <li><a href="">鞋靴、箱包、珠宝、奢侈品</a><i></i></li>
+                    <li><a href="">运动户外、钟表</a><i></i></li>
+                    <li><a href="">汽车、汽车用品</a><i></i></li>
+                    <li><a href="">母婴、玩具乐器</a><i></i></li>
+                    <li><a href="">食品、酒类、生鲜、特产</a><i></i></li>
+                    <li><a href="">医药保健</a><i></i></li>
+                    <li><a href="">图书、音像、电子书</a><i></i></li>
+                    <li><a href="">彩票、旅行、充值、票务</a><i></i></li>
+                    <li><a href=""> 理财、众筹、白条、保险</a><i></i></li>
+                </ul>
+            </div>
         </div>
         <div class="nav_items fl">
             <a href="">服装城</a>
@@ -105,6 +105,191 @@
         </div>
     </div>
 </div>
+
+<!-- 主体 -->
+<div class="w content">
+    <div class="main">
+        <img src="./uploads/banner1.jpg" alt="">
+        <div class="focus">
+            <div class="news">
+                <div class="news-one">
+                    <span>京东快报</span>
+                    <div class="more">
+                        <a href="">更多<i></i></a>
+                    </div>
+                </div>
+                <div class="news-two">
+                    <div class="news-two-items">
+                        <h6>[特惠]&nbsp;</h6>
+                        <span>备战开学季全民半价购数码</span>
+                    </div>
+                    <div class="news-two-items">
+                        <h6>[公告]&nbsp;</h6>
+                        <span>京东稳占家电网购六成份额</span>
+                    </div>
+                    <div class="news-two-items">
+                        <h6>[特惠]&nbsp;</h6>
+                        <span>百元中秋全品类礼券限里领</span>
+                    </div>
+                    <div class="news-two-items">
+                        <h6>[公告]&nbsp;</h6>
+                        <span>上品优生鲜享阳澄胡大闸蟹</span>
+                    </div>
+                    <div class="news-two-items">
+                        <h6>[特惠]&nbsp;</h6>
+                        <span>每日享折扣品优品质游</span>
+                    </div>
+                </div>
+            </div>
+            <div class="img">
+                <div
+                        class="img-items"
+                        style="background: url('./images/icons.png') no-repeat 3px -4px;"
+                >
+                    话费
+                </div>
+                <div
+                        class="img-items"
+                        style="background: url('./images/icons.png') no-repeat -61px -4px;"
+                >
+                    机票
+                </div>
+                <div
+                        class="img-items"
+                        style="background: url('./images/icons.png') no-repeat -123px -4px;"
+                >
+                    电影票
+                </div>
+                <div
+                        class="img-items"
+                        style="background: url('./images/icons.png') no-repeat -187px -4px;"
+                >
+                    游戏
+                </div>
+                <div
+                        class="img-items"
+                        style="background: url('./images/icons.png') no-repeat 3px -75px;"
+                >
+                    彩票
+                </div>
+                <div
+                        class="img-items"
+                        style="background: url('./images/icons.png') no-repeat -61px -75px;"
+                >
+                    加油卡
+                </div>
+                <div
+                        class="img-items"
+                        style="background: url('./images/icons.png') no-repeat -123px -75px;"
+                >
+                    酒店
+                </div>
+                <div
+                        class="img-items"
+                        style="background: url('./images/icons.png') no-repeat -187px -75px;"
+                >
+                    火车票
+                </div>
+                <div
+                        class="img-items"
+                        style="background: url('./images/icons.png') no-repeat -187px -148px;"
+                >
+                    众筹
+                </div>
+                <div
+                        class="img-items"
+                        style="background: url('./images/icons.png') no-repeat -61px -148px;"
+                >
+                    理财
+                </div>
+                <div
+                        class="img-items"
+                        style="background: url('./images/icons.png') no-repeat -123px -148px;"
+                >
+                    礼品卡
+                </div>
+                <div
+                        class="img-items"
+                        style="background: url('./images/icons.png') no-repeat -187px -148px;"
+                >
+                    白条
+                </div>
+            </div>
+            <img src="./images/boy.png" alt="">
+        </div>
+    </div>
+</div>
+<!-- 推荐页 -->
+<div class="recommend w">
+    <div class="recommend_one">
+        <span>今日推荐</span>
+    </div>
+    <div class="recommend_two">
+        <img src="./uploads/today01.png" alt="">
+        <img src="./uploads/today02.png" alt="">
+        <img src="./uploads/today03.png" alt="">
+        <img src="./uploads/today04.png" alt="">
+    </div>
+</div>
+
+<div class="floor w">
+    <div class="appliance">
+        <div class="left">
+            家用电器
+        </div>
+        <div class="right">
+            <a href="">热门</a><span>丨</span>
+             <a href="">大家电</a><span>丨</span>
+            <a href="">生活电器</a><span>丨</span>
+            <a href="">厨房电器</a><span>丨</span>
+            <a href="">个护健康</a><span>丨</span>
+            <a href="">应季电器</a><span>丨</span>
+            <a href="">空气/净水</a><span>丨</span>
+            <a href="">新奇特</a><span>丨</span>
+            <a href="">高端电器</a>
+        </div>
+    </div>
+    <div class="tab">
+        <div class="tab-one">
+            <div class="text">
+                <span><a href="">节能补贴</a></span>
+                <span><a href="">4K电视</a></span>
+                <span><a href="">空气净化器</a></span>
+                <span><a href="">IH电饭煲</a></span>
+                <span><a href="">滚简洗衣机</a></span>
+                <span><a href="">电热水器</a></span>
+            </div>
+            <img src="./uploads/floor-1-1.png" alt="">
+        </div>
+        <div class="tab-two">
+            <img src="./uploads/floor-1-b01.png" alt="">
+        </div>
+        <div class="tab-three">
+            <img src="./uploads/floor-1-2.png" alt="">
+            <img src="./uploads/floor-1-3.png" alt="">
+        </div>
+        <div class="tab-four">
+            <img src="./uploads/floor-1-4.png" alt="">
+        </div>
+        <div class="tab-three">
+            <img src="./uploads/floor-1-5.png" alt="">
+            <img src="./uploads/floor-1-6.png" alt="">
+        </div>
+    </div>
+    <div class="brand w">
+        <span><img src="./uploads/brand_03.png" alt=""></span>
+        <span><img src="./uploads/brand_05.png" alt=""></span>
+        <span><img src="./uploads/brand_07.png" alt=""></span>
+        <span><img src="./uploads/brand_09.png" alt=""></span>
+        <span><img src="./uploads/brand_11.png" alt=""></span>
+        <span><img src="./uploads/brand_13.png" alt=""></span>
+        <span><img src="./uploads/brand_15.png" alt=""></span>
+        <span><img src="./uploads/brand_17.png" alt=""></span>
+        <span><img src="./uploads/brand_19.png" alt=""></span>
+        <span><img src="./uploads/brand_21.png" alt=""></span>
+    </div>
+</div>
+
 <!-- 底部 -->
 <div class="footer">
     <div class="w">
@@ -199,7 +384,6 @@
                     <br>
                     京ICP备88881421号京公网安备118188887782
                 </p>
-            </div>
         </div>
     </div>
 </div>
