--- a/jd/index.html
+++ b/jd/index.html
@@ -44,28 +44,30 @@
     </div>
 </div>
 <!-- 头部 -->
-<div class="header w">
-    <div class="logo">
-        <h1>
-            <a href="index.html" title="京东">京东</a>
-        </h1>
-    </div>
-    <div class="search">
-        <input type="text" name="" id="" placeholder="语言开发">
-        <button>搜索</button>
-    </div>
-    <div class="hotwords">
-        <a href="#" class="style-red">优惠购首发</a>
-        <a href="#">亿元优惠</a>
-        <a href="#">9.9元团购</a>
-        <a href="#">满99减30</a>
-        <a href="#">办公用品</a>
-        <a href="#">电脑</a>
-        <a href="#">通信</a>
-    </div>
-    <div class="shopcar">
-        <i class="car"></i><i>我的购物车</i><i class="arrow"></i>
-        <i class="count">8</i>
+<div class="header">
+    <div class="w header-item">
+        <div class="logo">
+            <h1>
+                <a href="index.html" title="京东">京东</a>
+            </h1>
+        </div>
+        <div class="search">
+            <input type="text" name="" id="" placeholder="语言开发">
+            <button>搜索</button>
+        </div>
+        <div class="hotwords">
+            <a href="#" class="style-red">优惠购首发</a>
+            <a href="#">亿元优惠</a>
+            <a href="#">9.9元团购</a>
+            <a href="#">满99减30</a>
+            <a href="#">办公用品</a>
+            <a href="#">电脑</a>
+            <a href="#">通信</a>
+        </div>
+        <div class="shopcar">
+            <i class="car"></i><i>我的购物车</i><i class="arrow"></i>
+            <i class="count">8</i>
+        </div>
     </div>
 </div>
 <!-- 导航 -->
@@ -107,187 +109,272 @@
 </div>
 
 <!-- 主体 -->
-<div class="w content">
-    <div class="main">
-        <img src="./uploads/banner1.jpg" alt="">
-        <div class="focus">
-            <div class="news">
-                <div class="news-one">
-                    <span>京东快报</span>
-                    <div class="more">
-                        <a href="">更多<i></i></a>
+<div class="content">
+    <div class="w">
+        <div class="main">
+            <img src="./uploads/banner1.jpg" alt="">
+            <div class="focus">
+                <div class="news">
+                    <div class="news-one">
+                        <span>京东快报</span>
+                        <div class="more">
+                            <a href="">更多<i></i></a>
+                        </div>
+                    </div>
+                    <div class="news-two">
+                        <div class="news-two-items">
+                            <h6>[特惠]&nbsp;</h6>
+                            <span>备战开学季全民半价购数码</span>
+                        </div>
+                        <div class="news-two-items">
+                            <h6>[公告]&nbsp;</h6>
+                            <span>京东稳占家电网购六成份额</span>
+                        </div>
+                        <div class="news-two-items">
+                            <h6>[特惠]&nbsp;</h6>
+                            <span>百元中秋全品类礼券限里领</span>
+                        </div>
+                        <div class="news-two-items">
+                            <h6>[公告]&nbsp;</h6>
+                            <span>上品优生鲜享阳澄胡大闸蟹</span>
+                        </div>
+                        <div class="news-two-items">
+                            <h6>[特惠]&nbsp;</h6>
+                            <span>每日享折扣品优品质游</span>
+                        </div>
                     </div>
                 </div>
-                <div class="news-two">
-                    <div class="news-two-items">
-                        <h6>[特惠]&nbsp;</h6>
-                        <span>备战开学季全民半价购数码</span>
+                <div class="img">
+                    <div
+                            class="img-items"
+                            style="background: url('./images/icons.png') no-repeat 3px -4px;"
+                    >
+                        话费
                     </div>
-                    <div class="news-two-items">
-                        <h6>[公告]&nbsp;</h6>
-                        <span>京东稳占家电网购六成份额</span>
+                    <div
+                            class="img-items"
+                            style="background: url('./images/icons.png') no-repeat -61px -4px;"
+                    >
+                        机票
                     </div>
-                    <div class="news-two-items">
-                        <h6>[特惠]&nbsp;</h6>
-                        <span>百元中秋全品类礼券限里领</span>
+                    <div
+                            class="img-items"
+                            style="background: url('./images/icons.png') no-repeat -123px -4px;"
+                    >
+                        电影票
                     </div>
-                    <div class="news-two-items">
-                        <h6>[公告]&nbsp;</h6>
-                        <span>上品优生鲜享阳澄胡大闸蟹</span>
+                    <div
+                            class="img-items"
+                            style="background: url('./images/icons.png') no-repeat -187px -4px;"
+                    >
+                        游戏
                     </div>
-                    <div class="news-two-items">
-                        <h6>[特惠]&nbsp;</h6>
-                        <span>每日享折扣品优品质游</span>
+                    <div
+                            class="img-items"
+                            style="background: url('./images/icons.png') no-repeat 3px -75px;"
+                    >
+                        彩票
+                    </div>
+                    <div
+                            class="img-items"
+                            style="background: url('./images/icons.png') no-repeat -61px -75px;"
+                    >
+                        加油卡
+                    </div>
+                    <div
+                            class="img-items"
+                            style="background: url('./images/icons.png') no-repeat -123px -75px;"
+                    >
+                        酒店
+                    </div>
+                    <div
+                            class="img-items"
+                            style="background: url('./images/icons.png') no-repeat -187px -75px;"
+                    >
+                        火车票
+                    </div>
+                    <div
+                            class="img-items"
+                            style="background: url('./images/icons.png') no-repeat -187px -148px;"
+                    >
+                        众筹
+                    </div>
+                    <div
+                            class="img-items"
+                            style="background: url('./images/icons.png') no-repeat -61px -148px;"
+                    >
+                        理财
+                    </div>
+                    <div
+                            class="img-items"
+                            style="background: url('./images/icons.png') no-repeat -123px -148px;"
+                    >
+                        礼品卡
+                    </div>
+                    <div
+                            class="img-items"
+                            style="background: url('./images/icons.png') no-repeat -187px -148px;"
+                    >
+                        白条
                     </div>
                 </div>
+                <img src="./images/boy.png" alt="">
             </div>
-            <div class="img">
-                <div
-                        class="img-items"
-                        style="background: url('./images/icons.png') no-repeat 3px -4px;"
-                >
-                    话费
-                </div>
-                <div
-                        class="img-items"
-                        style="background: url('./images/icons.png') no-repeat -61px -4px;"
-                >
-                    机票
-                </div>
-                <div
-                        class="img-items"
-                        style="background: url('./images/icons.png') no-repeat -123px -4px;"
-                >
-                    电影票
-                </div>
-                <div
-                        class="img-items"
-                        style="background: url('./images/icons.png') no-repeat -187px -4px;"
-                >
-                    游戏
-                </div>
-                <div
-                        class="img-items"
-                        style="background: url('./images/icons.png') no-repeat 3px -75px;"
-                >
-                    彩票
-                </div>
-                <div
-                        class="img-items"
-                        style="background: url('./images/icons.png') no-repeat -61px -75px;"
-                >
-                    加油卡
-                </div>
-                <div
-                        class="img-items"
-                        style="background: url('./images/icons.png') no-repeat -123px -75px;"
-                >
-                    酒店
-                </div>
-                <div
-                        class="img-items"
-                        style="background: url('./images/icons.png') no-repeat -187px -75px;"
-                >
-                    火车票
-                </div>
-                <div
-                        class="img-items"
-                        style="background: url('./images/icons.png') no-repeat -187px -148px;"
-                >
-                    众筹
-                </div>
-                <div
-                        class="img-items"
-                        style="background: url('./images/icons.png') no-repeat -61px -148px;"
-                >
-                    理财
-                </div>
-                <div
-                        class="img-items"
-                        style="background: url('./images/icons.png') no-repeat -123px -148px;"
-                >
-                    礼品卡
-                </div>
-                <div
-                        class="img-items"
-                        style="background: url('./images/icons.png') no-repeat -187px -148px;"
-                >
-                    白条
-                </div>
-            </div>
-            <img src="./images/boy.png" alt="">
         </div>
     </div>
 </div>
 <!-- 推荐页 -->
-<div class="recommend w">
-    <div class="recommend_one">
-        <span>今日推荐</span>
-    </div>
-    <div class="recommend_two">
-        <img src="./uploads/today01.png" alt="">
-        <img src="./uploads/today02.png" alt="">
-        <img src="./uploads/today03.png" alt="">
-        <img src="./uploads/today04.png" alt="">
+<div class="recommend">
+    <div class="w">
+        <div class="recommend_one">
+            <span>今日推荐</span>
+        </div>
+        <div class="recommend_two">
+            <img src="./uploads/today01.png" alt="">
+            <img src="./uploads/today02.png" alt="">
+            <img src="./uploads/today03.png" alt="">
+            <img src="./uploads/today04.png" alt="">
+        </div>
     </div>
 </div>
 
-<div class="floor w">
-    <div class="appliance">
-        <div class="left">
-            家用电器
-        </div>
-        <div class="right">
-            <a href="">热门</a><span>丨</span>
-             <a href="">大家电</a><span>丨</span>
-            <a href="">生活电器</a><span>丨</span>
-            <a href="">厨房电器</a><span>丨</span>
-            <a href="">个护健康</a><span>丨</span>
-            <a href="">应季电器</a><span>丨</span>
-            <a href="">空气/净水</a><span>丨</span>
-            <a href="">新奇特</a><span>丨</span>
-            <a href="">高端电器</a>
-        </div>
-    </div>
-    <div class="tab">
-        <div class="tab-one">
-            <div class="text">
-                <span><a href="">节能补贴</a></span>
-                <span><a href="">4K电视</a></span>
-                <span><a href="">空气净化器</a></span>
-                <span><a href="">IH电饭煲</a></span>
-                <span><a href="">滚简洗衣机</a></span>
-                <span><a href="">电热水器</a></span>
+<!-- floor -->
+<div class="floor">
+    <div class="w">
+        <div class="appliance">
+            <div class="left">
+                家用电器
             </div>
-            <img src="./uploads/floor-1-1.png" alt="">
+            <div class="right">
+                <a href="">热门</a><span>丨</span>
+                <a href="">大家电</a><span>丨</span>
+                <a href="">生活电器</a><span>丨</span>
+                <a href="">厨房电器</a><span>丨</span>
+                <a href="">个护健康</a><span>丨</span>
+                <a href="">应季电器</a><span>丨</span>
+                <a href="">空气/净水</a><span>丨</span>
+                <a href="">新奇特</a><span>丨</span>
+                <a href="">高端电器</a>
+            </div>
         </div>
-        <div class="tab-two">
-            <img src="./uploads/floor-1-b01.png" alt="">
+        <div class="tab">
+            <div class="tab-one">
+                <div class="text">
+                    <span><a href="">节能补贴</a></span>
+                    <span><a href="">4K电视</a></span>
+                    <span><a href="">空气净化器</a></span>
+                    <span><a href="">IH电饭煲</a></span>
+                    <span><a href="">滚简洗衣机</a></span>
+                    <span><a href="">电热水器</a></span>
+                </div>
+                <img src="./uploads/floor-1-1.png" alt="">
+            </div>
+            <div class="tab-two">
+                <img src="./uploads/floor-1-b01.png" alt="">
+                <i></i><span></span><em></em>
+            </div>
+            <div class="tab-three">
+                <img src="./uploads/floor-1-2.png" alt="">
+                <img src="./uploads/floor-1-3.png" alt="">
+            </div>
+            <div class="tab-four">
+                <img src="./uploads/floor-1-4.png" alt="">
+            </div>
+            <div class="tab-three">
+                <img src="./uploads/floor-1-5.png" alt="">
+                <img src="./uploads/floor-1-6.png" alt="">
+            </div>
         </div>
-        <div class="tab-three">
-            <img src="./uploads/floor-1-2.png" alt="">
-            <img src="./uploads/floor-1-3.png" alt="">
-        </div>
-        <div class="tab-four">
-            <img src="./uploads/floor-1-4.png" alt="">
-        </div>
-        <div class="tab-three">
-            <img src="./uploads/floor-1-5.png" alt="">
-            <img src="./uploads/floor-1-6.png" alt="">
+        <div class="brand w">
+            <span><img src="./uploads/brand_03.png" alt=""></span>
+            <span><img src="./uploads/brand_05.png" alt=""></span>
+            <span><img src="./uploads/brand_07.png" alt=""></span>
+            <span><img src="./uploads/brand_09.png" alt=""></span>
+            <span><img src="./uploads/brand_11.png" alt=""></span>
+            <span><img src="./uploads/brand_13.png" alt=""></span>
+            <span><img src="./uploads/brand_15.png" alt=""></span>
+            <span><img src="./uploads/brand_17.png" alt=""></span>
+            <span><img src="./uploads/brand_19.png" alt=""></span>
+            <span><img src="./uploads/brand_21.png" alt=""></span>
         </div>
     </div>
-    <div class="brand w">
-        <span><img src="./uploads/brand_03.png" alt=""></span>
-        <span><img src="./uploads/brand_05.png" alt=""></span>
-        <span><img src="./uploads/brand_07.png" alt=""></span>
-        <span><img src="./uploads/brand_09.png" alt=""></span>
-        <span><img src="./uploads/brand_11.png" alt=""></span>
-        <span><img src="./uploads/brand_13.png" alt=""></span>
-        <span><img src="./uploads/brand_15.png" alt=""></span>
-        <span><img src="./uploads/brand_17.png" alt=""></span>
-        <span><img src="./uploads/brand_19.png" alt=""></span>
-        <span><img src="./uploads/brand_21.png" alt=""></span>
+</div>
+<div class="floor">
+    <div class="w">
+        <div class="appliance">
+            <div class="left">
+                手机通讯
+            </div>
+            <div class="right">
+                <a href="">热门</a><span>丨</span>
+                <a href="">品质优选</a><span>丨</span>
+                <a href="">新机尝鲜</a><span>丨</span>
+                <a href="">高性价比</a><span>丨</span>
+                <a href="">口碑推荐</a><span>丨</span>
+                <a href="">合约机</a><span>丨</span>
+                <a href="">手机卡</a><span>丨</span>
+                <a href="">店铺精选</a><span>丨</span>
+                <a href="">手机配件</a>
+            </div>
+        </div>
+        <div class="tab">
+            <div class="tab-one">
+                <div class="text">
+                    <span><a href="">手机通讯</a></span>
+                    <span><a href="">依旧换新</a></span>
+                    <span><a href="">双卡双待</a></span>
+                    <span><a href="">自营配件</a></span>
+                    <span><a href="">金属机身</a></span>
+                    <span><a href="">高清屏</a></span>
+                </div>
+                <img src="./uploads/floor-1-1.png" alt="">
+            </div>
+            <div class="tab-two">
+                <img src="./uploads/floor-1-b01.png" alt="">
+                <i></i><span></span><em></em>
+            </div>
+            <div class="tab-three">
+                <img src="./uploads/floor-1-2.png" alt="">
+                <img src="./uploads/floor-1-3.png" alt="">
+            </div>
+            <div class="tab-four">
+                <img src="./uploads/floor-1-4.png" alt="">
+            </div>
+            <div class="tab-three">
+                <img src="./uploads/floor-1-5.png" alt="">
+                <img src="./uploads/floor-1-6.png" alt="">
+            </div>
+        </div>
+        <div class="brand w">
+            <span><img src="./uploads/brand_03.png" alt=""></span>
+            <span><img src="./uploads/brand_05.png" alt=""></span>
+            <span><img src="./uploads/brand_07.png" alt=""></span>
+            <span><img src="./uploads/brand_09.png" alt=""></span>
+            <span><img src="./uploads/brand_11.png" alt=""></span>
+            <span><img src="./uploads/brand_13.png" alt=""></span>
+            <span><img src="./uploads/brand_15.png" alt=""></span>
+            <span><img src="./uploads/brand_17.png" alt=""></span>
+            <span><img src="./uploads/brand_19.png" alt=""></span>
+            <span><img src="./uploads/brand_21.png" alt=""></span>
+        </div>
     </div>
+</div>
+
+<!-- 固定导航-->
+<div class="fixed-nav">
+    <ul>
+        <li><a href="">家用电器</a></li>
+        <li><a href="">收集通讯</a></li>
+        <li><a href="">电脑办公</a></li>
+        <li><a href=""> 家居家具</a></li>
+        <li><a href="">生活用品</a></li>
+        <li><a href="">运动户外</a></li>
+        <li><a href="">汽车用品</a></li>
+        <li><a href="">食品酒类</a></li>
+        <li><a href="">医药保健</a></li>
+        <li><a href="">图书音像</a></li>
+        <li><a href="">金融彩票</a></li>
+    </ul>
 </div>
 
 <!-- 底部 -->
@@ -387,6 +474,7 @@
         </div>
     </div>
 </div>
+
 
 </body>
 </html>
