--- a/jd/index.html
+++ b/jd/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <li>&nbsp;&nbsp;京东欢迎您！请</li>
                 <li><a href="login.html">登录</a>&nbsp;&nbsp;</li>
-                <li><a  class="color-red" href="register">免费注册</a></li>
+                <li><a  class="color-red" href="register.html">免费注册</a></li>
             </ul>
             </div>
         <div class="fr">
@@ -36,7 +36,7 @@
                 <li>|</li>
                 <li><a href="">京东会员</a></li>
                 <li>|</li>
-                <li><a href="">我的京东</a>&nbsp;<i class="icomoon"></i></li>
+                <li><a href="">我的京东</a>&nbsp<i class="icomoon"></i></li>
                 <li>|</li>
                 <li><a href="">我的订单</a></li>
             </ul>
@@ -413,45 +413,45 @@
             <ul>
                 <li>
                     <h5>购物指南</h5>
-                    <a href="">购物流程</a>
-                    <a href="">会员介绍</a>
-                    <a href="">生活旅行团购</a>
-                    <a href="">常见问题</a>
-                    <a href="">大家电</a>
-                    <a href="">联系客服</a>
+                    <a href="">购物流程</a><br>
+                    <a href="">会员介绍</a><br>
+                    <a href="">生活旅行团购</a><br>
+                    <a href="">常见问题</a><br>
+                    <a href="">大家电</a><br>
+                    <a href="">联系客服</a><br>
                 </li>
                 <li>
                     <h5>配送方式</h5>
-                    <a href="">上门自提</a>
-                    <a href="">211限时达</a>
-                    <a href="">配送服务查询</a>
-                    <a href="">配送费收取标准</a>
-                    <a href="">海外配送</a>
+                    <a href="">上门自提</a><br>
+                    <a href="">211限时达</a><br>
+                    <a href="">配送服务查询</a><br>
+                    <a href="">配送费收取标准</a><br>
+                    <a href="">海外配送</a><br>
 
                 </li>
                 <li>
                     <h5>支付方式</h5>
-                    <a href="">货到付款</a>
-                    <a href="">在线支付</a>
-                    <a href="">分期付款</a>
-                    <a href="">邮局汇款</a>
-                    <a href="">公司转账</a>
+                    <a href="">货到付款</a><br>
+                    <a href="">在线支付</a><br>
+                    <a href="">分期付款</a><br>
+                    <a href="">邮局汇款</a><br>
+                    <a href="">公司转账</a><br>
                 </li>
                 <li>
                     <h5>售后服务</h5>
-                    <a href="">售后政策</a>
-                    <a href="">价格保护</a>
-                    <a href="">退款说明</a>
-                    <a href="">返修退换货</a>
-                    <a href="">取消订单</a>
+                    <a href="">售后政策</a><br>
+                    <a href="">价格保护</a><br>
+                    <a href="">退款说明</a><br>
+                    <a href="">返修退换货</a><br>
+                    <a href="">取消订单</a><br>
                 </li>
                 <li>
                     <h5>特色服务</h5>
-                    <a href="">夺宝岛</a>
-                    <a href="">DIY装机</a>
-                    <a href="">延保服务</a>
-                    <a href="">京东驱卡</a>
-                    <a href="">京东通信</a>
+                    <a href="">夺宝岛</a><br>
+                    <a href="">DIY装机</a><br>
+                    <a href="">延保服务</a><br>
+                    <a href="">京东驱卡</a><br>
+                    <a href="">京东通信</a><br>
                 </li>
             </ul>
             <h5>&nbsp;&nbsp;特色服务</h5>
@@ -459,18 +459,18 @@
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;京东通信</p>
         </div>
         <div class="copyright">
-                <p class="links">
-                    关于我们 丨 联系我们 丨 联系客服 丨 商家入驻 丨 营销中心
-                    丨 手机京东 丨 友情链接 丨 销售联盟 丨 京东社区
-                    丨 京东公益丨 English site 丨 Contact U
-                </p>
-                <p class="info">
-                    地址：北京市昌平区建材城西路金燕龙办公楼一层
-                    邮编：180096 电话：400-618-4000 传真：616-82935100
-                    邮箱：zhanghj+itcast,cn
-                    <br>
-                    京ICP备88881421号京公网安备118188887782
-                </p>
+            <p class="links">
+                关于我们 丨 联系我们 丨 联系客服 丨 商家入驻 丨 营销中心
+                丨 手机京东 丨 友情链接 丨 销售联盟 丨 京东社区
+                丨 京东公益丨 English site 丨 Contact U
+            </p>
+            <p class="info">
+                地址：北京市昌平区建材城西路金燕龙办公楼一层
+                邮编：180096 电话：400-618-4000 传真：616-82935100
+                邮箱：zhanghj+itcast,cn
+                <br>
+                京ICP备88881421号京公网安备118188887782
+            </p>
         </div>
     </div>
 </div>
