--- a/jd/detail.html
+++ b/jd/detail.html
@@ -107,7 +107,7 @@
         </div>
     </div>
 </div>
-<!-- 产品介绍 -->
+<!-- 产品信息 -->
 <div class="product-info">
     <div class="w">
         <div class="left">
@@ -228,7 +228,144 @@
         </div>
     </div>
 </div>
-
+<!-- 产品详细介绍 -->
+<div class="product-introduction">
+    <div class="w">
+            <div class="introduction-left">
+                <div class="introduction-left-left">相关分类</div>
+                <div class="introduction-left-right">推荐品牌</div>
+                <div class="introduction-left-img">
+                    <div class="left-img-border">
+                            <div class="left-img-item">
+                                <a href="">
+                                    <img src="./uploads/iphone.png" alt="">
+                                    <span class="left-img-text">蓝孩 苹果iPhone6S抗蓝光防爆手机防爆手机防爆手机</span>
+                                </a>
+                                <h5 class="img-item-position">¥1000</h5>
+                                <div class="left-img-cart">
+                                    <a href="">加入购物车</a>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+                <div class="introduction-left-img">
+                    <div class="left-img-border">
+                        <div class="left-img-item">
+                            <a href="">
+                                <img src="./uploads/iphone.png" alt="">
+                                <span class="left-img-text">蓝孩 苹果iPhone6S抗蓝光防爆手机防爆手机防爆手机</span>
+                            </a>
+                            <h5 class="img-item-position">¥1000</h5>
+                            <div class="left-img-cart">
+                                <a href="">加入购物车</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="introduction-left-img">
+                    <div class="left-img-border">
+                        <div class="left-img-item">
+                            <a href="">
+                                <img src="./uploads/iphone.png" alt="">
+                                <span class="left-img-text">蓝孩 苹果iPhone6S抗蓝光防爆手机防爆手机防爆手机</span>
+                            </a>
+                            <h5 class="img-item-position">¥1000</h5>
+                            <div class="left-img-cart">
+                                <a href="">加入购物车</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="introduction-left-img">
+                    <div class="left-img-border">
+                        <div class="left-img-item">
+                            <a href="">
+                                <img src="./uploads/iphone.png" alt="">
+                                <span class="left-img-text">蓝孩 苹果iPhone6S抗蓝光防爆手机防爆手机防爆手机</span>
+                            </a>
+                            <h5 class="img-item-position">¥1000</h5>
+                            <div class="left-img-cart">
+                                <a href="">加入购物车</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="introduction-left-img">
+                    <div class="left-img-border">
+                        <div class="left-img-item">
+                            <a href="">
+                                <img src="./uploads/iphone.png" alt="">
+                                <span class="left-img-text">蓝孩 苹果iPhone6S抗蓝光防爆手机防爆手机防爆手机</span>
+                            </a>
+                            <h5 class="img-item-position">¥1000</h5>
+                            <div class="left-img-cart">
+                                <a href="">加入购物车</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="introduction-left-img">
+                    <div class="left-img-border">
+                        <div class="left-img-item">
+                            <a href="">
+                                <img src="./uploads/iphone.png" alt="">
+                                <span class="left-img-text">蓝孩 苹果iPhone6S抗蓝光防爆手机防爆手机防爆手机</span>
+                            </a>
+                            <h5 class="img-item-position">¥1000</h5>
+                            <div class="left-img-cart">
+                                <a href="">加入购物车</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="introduction-left-img">
+                    <div class="left-img-border">
+                        <div class="left-img-item">
+                            <a href="">
+                                <img src="./uploads/iphone.png" alt="">
+                                <span class="left-img-text">蓝孩 苹果iPhone6S抗蓝光防爆手机防爆手机防爆手机</span>
+                            </a>
+                            <h5 class="img-item-position">¥1000</h5>
+                            <div class="left-img-cart">
+                                <a href="">加入购物车</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="introduction-right">
+                <div class="introduction-right-top">
+                    <div class="introduction-right-choose">
+                    商品介绍
+                    </div>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;规格与包装</span>
+                    <span>售后保障</span>
+                    <span>商品评价（50000）</span>
+                    <span>手机社区</span>
+                </div>
+                <div class="introduction-right-content">
+                    <div class="content-text">
+                        分辨率：1920*1080(FHD)<br>
+                        后置摄像头：1200万像素<br>
+                        前置摄像头：500万像素<br>
+                        核 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;数：其他<br>
+                        频 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;率：以官网信息为准<br>
+                        品牌： Apple &nbsp;&nbsp;&nbsp;关注<br>
+                        商品名称：APPLEiPhone 6s Plus<br>
+                        商品编号：1861098<br>
+                        商品毛重：0.51kg<br>
+                        商品产地：中国大陆<br>
+                        热点：指纹识别，Apple Pay，金属机身，拍照神器<br>
+                        系统：苹果（IOS）<br>
+                        像素：1000-1600万<br>
+                        机身内存：64GB<br>
+                    </div>
+                    <img src="./uploads/intro01.png" alt="" class="content-img-one">
+                    <img src="./uploads/bottom.png" alt="" class="content-img-two">
+                </div>
+            </div>
+    </div>
+</div>
 
 
 <!-- 底部 -->
